// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component ScrollTop should not render component 1`] = `""`;

exports[`Component ScrollTop should not render component 2`] = `
<ScrollTop
  classes={
    Object {
      "hideButton": "ScrollTop-hideButton-3",
      "scrollTop": "ScrollTop-scrollTop-1",
      "showButton": "ScrollTop-showButton-2",
    }
  }
  containerId="content-container"
  show={false}
  showAfter={100}
/>
`;

exports[`Component ScrollTop should render component 1`] = `
<Hidden
  implementation="js"
  lgDown={false}
  lgUp={false}
  mdDown={false}
  mdUp={false}
  smDown={true}
  smUp={false}
  xlDown={false}
  xlUp={false}
  xsDown={false}
  xsUp={false}
>
  <WithStyles(Fab)
    aria-label="Scroll to top of this page"
    className=" undefined undefined "
    color="secondary"
    id="scrolltopbtn"
    title="Scroll to top of this page"
  >
    <pure(ArrowUpwardIcon)
      onClick={[Function]}
    />
  </WithStyles(Fab)>
</Hidden>
`;

exports[`Component ScrollTop should render component 2`] = `
<ScrollTop
  classes={
    Object {
      "hideButton": "ScrollTop-hideButton-3",
      "scrollTop": "ScrollTop-scrollTop-1",
      "showButton": "ScrollTop-showButton-2",
    }
  }
  containerId="content-container"
  show={true}
  showAfter={100}
/>
`;
